--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,10 @@
     <title>My test page</title>
     <link href="styles/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
-
+	  
+    <meta property="og:image" content="https://zebulon112233.github.io/honlap001/images/cica.jpg">
+    <meta property="og:description" content="Sajat cicas honlap, itt tudod nezegetni, hogy milyen funkciokat tanultam meg epp használni">
+    <meta property="og:title" content="Az elso honlapom">
   </head>
   <body>
 	<h1> Sziasztok!!  </h1>
