--- a/index.htm
+++ b/index.htm
@@ -9,6 +9,7 @@
     <meta property="og:image" content="https://zebulon112233.github.io/honlap001/images/cica.jpg">
     <meta property="og:description" content="Sajat cicas honlap, itt tudod nezegetni, hogy milyen funkciokat tanultam meg epp használni">
     <meta property="og:title" content="Az elso honlapom">
+	  <link rel="icon" href="favico.ico" type="image/x-icon">
   </head>
   <body>
 	<h1> Sziasztok!!  </h1>
